--- a/17_Shrinking_Guest_list/package.json
+++ b/17_Shrinking_Guest_list/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "14_guest_list",
+  "name": "17_shrinking_guest_list",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "devDependencies": {
+    "@types/node": "^20.11.20"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^20.11.20"
-  }
+  "license": "ISC"
 }
